# contact_graspnet

./: CMakeLists.txt  Pipfile  README.md  package.xml  pyproject.toml
contact_graspnet/: inference.py  inference_ros.py  ros_client.py
launch/: client.launch  contact_graspnet.launch
srv/: EstimateGrasp.srv  Inference.srv
