[project]
name = "contact-graspnet"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Tatsuro Sakaguchi", email = "tatsuro.sakaguchi@g.softbank.co.jp" },
]
dependencies = [
    # "absl-py==0.11.0",
    # "astor==0.8.1",
    # "astunparse==1.6.3",
    # "cachetools==4.1.1",
    # "chardet==3.0.4",
    # "decorator==4.4.2",
    # "freetype-py==2.2.0",
    # "gast==0.3.3",
    # "google-auth==1.23.0",
    # "google-auth-oauthlib==0.4.2",
    # "google-pasta==0.2.0",
    # "grpcio==1.33.2",
    # "idna==2.10",
    # "imageio==2.9.0",
    # "importlib-metadata==2.0.0",
    # "keras-applications==1.0.8",
    # "keras-preprocessing==1.1.2",
    # "markdown==3.3.3",
    # "networkx==2.5",
    # "oauthlib==3.1.0",
    # "opencv-python==4.4.0.46",
    # "opt-einsum==3.3.0",
    # "protobuf==3.13.0",
    # "pyasn1==0.4.8",
    # "pyasn1-modules==0.2.8",
    # "pyglet==1.5.9",
    # "pyopengl==3.1.0",
    # "pyrender==0.1.43",
    # "python-fcl==0.0.12",
    # "pyyaml==5.3.1",
    # "requests==2.24.0",
    # "requests-oauthlib==1.3.0",
    # "rsa==4.6",
    # "rtree",
    # "scipy==1.4.1",
    # "tensorboard==2.2.2",
    # "tensorboard-plugin-wit==1.7.0",
    # "tensorflow-estimator==2.2.0",
    "tensorflow==2.5.0",
    "termcolor==1.1.0",
    "urllib3==1.25.11",
    "werkzeug==1.0.1",
    "wrapt==1.12.1",
    "zipp==3.4.0",
    "pip>=24.0",
    "pyside2>=5.15.2.1",
    "rospkg>=1.5.0",
    "opencv-python>=4.9.0.80",
    "Pillow>=10.2.0",
    "trimesh>=4.1.7",
    "pyrender>=0.1.45",
    "tqdm>=4.66.2",
    "mayavi>=4.8.1",
    "pyyaml<6.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["setuptools>=61.0,<=67.8.0"]
build-backend = "setuptools.build_meta"

[tool.rye]
managed = true
dev-dependencies = []

[tool.setuptools]
py-modules = []
